src/test/ui/reachable/expr_unary.stderr
error[E0600]: cannot apply unary operator `!` to type `!`
  --> $DIR/expr_unary.rs:8:16
   |
LL |     let x: ! = ! { return; };
   |                ^^^^^^^^^^^^^ cannot apply unary operator `!`

error: unreachable expression
  --> $DIR/expr_unary.rs:8:16
   |
LL |     let x: ! = ! { return; };
   |                ^^^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/expr_unary.rs:5:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^
note: any code following this expression is unreachable
  --> $DIR/expr_unary.rs:8:20
   |
LL |     let x: ! = ! { return; };
   |                    ^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0600`.
